--- a/_config.yml
+++ b/_config.yml
@@ -1,30 +1,30 @@
 # Site Settings
 baseurl: ""
-url : "https://naye0ng.github.io"
+url : "https://jenniferlukk.github.io"
 
 # Blog Settings
 theme_settings :
-  title : Grape Theme
+  title : Jennifer Luk Portfolio
   favicon : assets/favicon.ico
 
   # Profile Settings
   profile :
     image : assets/img/smile.png
-    username : Nayeong Kim
-    description : creator of Grape-Theme! Grape-Theme is my first jekyll theme and you can customize this theme easily.
-    experience :
-      - start : 2017-05-03
-        end : 2018-05-06
-        experience : company name, title
-    skills : 
-      - skill : HTML5 & CSS
-        value : 85  # Percent value
+    username : Jennifer Luk
+    description : 
+    # experience :
+    #   - start : 2017-05-03
+    #     end : 2018-05-06
+    #     experience : company name, title
+    # skills : 
+    #   - skill : HTML5 & CSS
+    #     value : 85  # Percent value
         
   # Icons
   icons :
     email:  # Full email address, e.g. "sample@google.com"
     linkedin:  # Full URL 
-    github: naye0ng
+    github: jenniferlukk
     gitlab: 
     bitbucket: 
     google_plus:
