--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -5,7 +5,7 @@
     url : https://jenniferlukk.github.io/ # Full URL
     image : "portfolio.png" # path: assets/project/
     date : 2019.06.09 - Developing
-    title : Grape-Theme
+    title : McMaster Global Entrepreneurship Week
     summary : A awesome jekyll theme!
     description : This project is my first jekyll theme. and everyone can customize this easily.  
     contents :
