--- a/_config.yml
+++ b/_config.yml
@@ -12,13 +12,13 @@ theme_settings :
     image : assets/img/smile.png
     username : Jennifer Luk
     description : 
-    # experience :
-    #   - start : 2017-05-03
-    #     end : 2018-05-06
-    #     experience : company name, title
-    # skills : 
-    #   - skill : HTML5 & CSS
-    #     value : 85  # Percent value
+    experience :
+      - start : 2017-05-03
+        end : 2018-05-06
+        experience : company name, title
+    skills : 
+      - skill : HTML5 & CSS
+        value : 85  # Percent value
         
   # Icons
   icons :
