--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,39 +1,14 @@
-# displayed under portfolio page
-- project :
-    print : True # If 'False' is selected, it will not be displayed in 'home.html > aside > .proj-content'. 
-    modal : True # If 'True' is selected, modal can open in 'portfolio.html'. 
-    url : https://jenniferlukk.github.io/ # Full URL
-    image : "portfolio.png" # path: assets/project/
-    date : 2019.06.09 - Developing
-    title : McMaster Global Entrepreneurship Week
-    summary : A awesome jekyll theme!
-    description : This project is my first jekyll theme. and everyone can customize this easily.  
-    contents :
-        - title : 1. 블로그 첫 화면 구성
-          image : home.png
-          description : <li>Responsive Layout</li>
-            <li>User Profile</li> 
-            <li>Tags</li> 
-            <li>Projects</li> 
-            <li>Pagination</li>
-        - title : 2. 태그 페이지
-          image : tags.png
-          description : <li>Responsive Layout</li> 
-            <li>Tags</li> 
-        - title : 3. 남은 개발 과제
-          image :
-          description : <li>project 부분 디자인 변경</li>
-            <li>favicon.ico, search 기능</li>
-            <li>OG Tag 추가</li>
-            <li>profile 이미지 효과</li>
-            <li>gem 배포</li> 
+- title: Instagram Clone
+  url: https://github.com/jenniferlukk/instagram-clone
+  image: /assets/images/instagram-clone.png
+  description: "A full-stack Instagram clone built with React and Firebase."
 
-- project :
-    print : True # If 'False' is selected, it will not be displayed in 'home.html > aside > .proj-content'. 
-    modal : True # If 'True' is selected, modal can open in 'portfolio.html'. 
-    url :  # Full URL
-    image : # path: assets/project/
-    date : 2019.06.09 - Developing
-    title : Dummy project
-    summary : This is Dummy
-    description :  
+- title: Portfolio Website
+  url: https://jenniferlukk.github.io
+  image: /assets/images/portfolio.png
+  description: "My personal Jekyll portfolio site."
+
+- title: Data Dashboard
+  url: https://github.com/jenniferlukk/data-dashboard
+  image: /assets/images/dashboard.png
+  description: "An interactive data dashboard using Python and Plotly."
