--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -14,6 +14,10 @@
   url: https://www.instagram.com/reel/DCsHLJwvpIh/
   description: "Showcasing the energy and innovation of McMaster Global Entrepreneurship Week through highlights, interviews, and student-led initiatives that inspire the next generation of entrepreneurs."
 
+- title: Unlabled Instagram
+  url: https://www.instagram.com/unlabeledtheshop/
+  description: "Managed and curated all content for Unlabeled's Instagram, including photography, captions, video editing, and mental health advocate collaborations to showcase the brand's style and engage its audience."
+
 # - title: Data Dashboard
 #   url: https://github.com/jenniferlukk/data-dashboard
 #   image: /assets/images/dashboard.png
