--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ theme_settings :
 
   # Icons
   icons :
-    email:  # Full email address, e.g. "sample@google.com"
-    linkedin:  # Full URL 
+    email:  lukj4@mcmaster.ca
+    linkedin:  https://www.linkedin.com/in/jennifer-lukk/
     github: jenniferlukk
     gitlab: 
     bitbucket: 
