--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,3 +1,9 @@
+- title: Marketing & Communication
+  description: "Projects that showcase strategic storytelling, creative design, and audience engagement. This includes brand campaigns, content creation, newsletters, social media strategies, and internal/external communications. These projects demonstrate my ability to craft messages that resonate and drive results."
+
+- title: Data & Coding Projects
+  description: Projects that highlight analytical, technical, and programming skills. This includes data analysis, machine learning, software development, web applications, and automation. These projects demonstrate my ability to extract insights, solve problems with technology, and build scalable solutions.
+
 - title: McMaster Made at Mac Reel Series - 1
   url: https://www.instagram.com/mcmasteru/reel/DHbuyd4OPOU/ 
   description: "Interview with Kyle Fernandes, Mechanical Engineering student and co-founder of LockIn, highlighting his journey and innovative work."
