edited project descriptions

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -14,19 +14,35 @@
 
 - title: McMaster Made at Mac Reel Series - 1
   url: https://www.instagram.com/mcmasteru/reel/DHbuyd4OPOU/ 
-  description: "Interview with Kyle Fernandes, Mechanical Engineering student and co-founder of LockIn, highlighting his journey and innovative work."
+  description: "Produced and edited a video interview with Kyle Fernandes, Mechanical Engineering student and co-founder of LockIn, showcasing his entrepreneurial journey and innovative work."
 
 - title: McMaster Made at Mac Reel Series - 2
   url: https://www.instagram.com/mcmasteru/reel/DHv6jnzgXVi/
-  description: "Interview with Hoon Yang, an Integrated Business and Humanities student and CEO and co-founder of Firefly Spark."
+  description: "Produced and edited a video interview with Hoon Yang, an Integrated Business and Humanities student and CEO and co-founder of Firefly Spark."
 
 - title: McMaster Made at Mac Reel Series - 3
   url: https://www.instagram.com/mcmasteru/reel/DIjofMWPeSJ/
-  description: "Interview with Deena Al-Sammak, an Integrated Biomedical (iBiomed) Engineering & Health Sciences student and co-founder of Power of Play."
+  description: "Produced and edited a video interview with Deena Al-Sammak, an Integrated Biomedical (iBiomed) Engineering & Health Sciences student and co-founder of Power of Play."
 
 - title: McMaster Global Entrepreneurship Week Highlight Reel
   url: https://www.instagram.com/reel/DCsHLJwvpIh/
-  description: "Showcasing the energy and innovation of McMaster Global Entrepreneurship Week through highlights, interviews, and student-led initiatives that inspire the next generation of entrepreneurs."
+  description: "Captured the excitement of McMaster Global Entrepreneurship Week, highlighting student innovators and dynamic initiatives during the Startup Survivor Pitch event that inspires the next generation of entrepreneurs."
+
+- title: McMaster Brighter World Tression CEO Interview Article
+  url: https://brighterworld.mcmaster.ca/articles/made-at-mac-parisa-agahi-compression-wear-but-make-it-fashion/
+  description: "Interviewed Parisa Agahi, CEO of Tression and wrote an article highlighting the launch of her fashion-forward compression wear startup. Showcased student entrepreneurship and innovation in the McMaster community."
+
+- title: McMaster Daily News Nerview Surgical CEO Interview Article
+  url: https://dailynews.mcmaster.ca/articles/from-undergrad-to-ceo-forge-entrepreneurship-startup-survivor/
+  description: "Interviewed the founder of Nerview Surgical and wrote a feature article detailing their journey from undergraduate student to startup CEO. Highlighted lessons learned and strategies for aspiring entrepreneurs."
+
+- title: McMaster Daily News Boardball Founder Interview Article
+  url: https://dailynews.mcmaster.ca/articles/mcmaster-grad-and-boardball-founder-shares-advice-for-aspiring-entrepreneurs/
+  description: "Interviewed a McMaster graduate and founder of Boardball, crafting an article that shared their entrepreneurial journey and practical advice for students looking to start their own ventures."
+
+- title: McMaster Daily News Entrepreneurship Week Article
+  url: https://dailynews.mcmaster.ca/articles/entrepreneurship-is-for-everyone-global-entrepreneurship-week-at-mcmaster/
+  description: "Covered Global Entrepreneurship Week at McMaster University, producing an article that showcased student-led initiatives, workshops, and pitch competitions inspiring growth in the McMaster entrepreneurship community."
 
 - title: Kenvue Agents of Change and Empowerment Newsletter
   pdf: /assets/pdf/kenvue-newsletter.pdf
